--- a/linux-c201/PKGBUILD
+++ b/linux-c201/PKGBUILD
@@ -7,19 +7,19 @@
 buildarch=4
 
 pkgbase=linux-c201
-_srcname=linux-4.18
+_srcname=linux-4.19
 _kernelname=${pkgbase#linux}
 _desc="ARMv7 multi-platform"
-pkgver=4.18.8
-pkgrel=3
-rcnrel=armv7-x8
+pkgver=4.19.0
+pkgrel=1
+rcnrel=armv7-x3
 arch=('armv7h')
 url="http://www.kernel.org/"
 license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'uboot-tools' 'vboot-utils' 'dtc')
 options=('!strip')
 source=("http://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
-        "http://www.kernel.org/pub/linux/kernel/v4.x/patch-${pkgver}.xz"
+#        "http://www.kernel.org/pub/linux/kernel/v4.x/patch-${pkgver}.xz"
         "http://rcn-ee.com/deb/sid-armhf/v${pkgver}-${rcnrel}/patch-${pkgver%.0}-${rcnrel}.diff.gz"
         '0001-ARM-atags-add-support-for-Marvell-s-u-boot.patch'
         '0002-ARM-atags-fdt-retrieve-MAC-addresses-from-Marvell-bo.patch'
@@ -29,17 +29,12 @@ source=("http://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
         '0006-set-default-cubietruck-led-triggers.patch'
         '0007-exynos4412-odroid-set-higher-minimum-buck2-regulator.patch'
         '0008-ARM-dove-enable-ethernet-on-D3Plug.patch'
-        '0009-power-add-power-sequence-library.patch'
-        '0010-usb-core-add-power-sequence-handling-for-USB-devices.patch'
-        '0011-ARM-dts-imx6qdl-Enable-usb-node-children-with-reg.patch'
-        '0012-ARM-dts-imx6qdl-udoo.dtsi-fix-onboard-USB-HUB-proper.patch'
-        '0013-ARM-dts-imx6q-evi-Fix-onboard-hub-reset-line.patch'
-        '0014-ARM-mvebu-declare-asm-symbols-as-character-arrays-in.patch'
+        '0009-usb-dwc2-disable-power_down-on-rockchip-devices.patch'
 	'0020-RK3288-HDMI-clock-hacks-combined.patch'
-	'0021-usb-dwc2-disable-power-down-for-rockchip-and-amlogic.patch'
 	'0022-dwc2-mode-hack.patch'
 	'0023-drm-panel-simple-Adjust-n116bge-mode-rate-for-veyron.patch'
 	'0024-drm-rockchip-vop-Dither-down-to-RGB666-if-output-bpc.patch'
+	'0025-drm-rockchip-vop-implement-gamma-lut.patch'
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
@@ -51,11 +46,11 @@ prepare() {
   cd "${srcdir}/${_srcname}"
   
   # add upstream patch
-  GIT_DIR=/tmp git apply --whitespace=nowarn ../patch-${pkgver}
+#  GIT_DIR=/tmp git apply --whitespace=nowarn ../patch-${pkgver}
 
   # RCN patch
   GIT_DIR=/tmp git apply ../patch-${pkgver%.0}-${rcnrel}.diff
-
+ 
   # ALARM patches
   GIT_DIR=/tmp git apply ../0001-ARM-atags-add-support-for-Marvell-s-u-boot.patch
   GIT_DIR=/tmp git apply ../0002-ARM-atags-fdt-retrieve-MAC-addresses-from-Marvell-bo.patch
@@ -65,20 +60,14 @@ prepare() {
   GIT_DIR=/tmp git apply ../0006-set-default-cubietruck-led-triggers.patch
   GIT_DIR=/tmp git apply ../0007-exynos4412-odroid-set-higher-minimum-buck2-regulator.patch
   GIT_DIR=/tmp git apply ../0008-ARM-dove-enable-ethernet-on-D3Plug.patch
-  GIT_DIR=/tmp git apply ../0009-power-add-power-sequence-library.patch
-  GIT_DIR=/tmp git apply ../0010-usb-core-add-power-sequence-handling-for-USB-devices.patch
-  GIT_DIR=/tmp git apply ../0011-ARM-dts-imx6qdl-Enable-usb-node-children-with-reg.patch
-  GIT_DIR=/tmp git apply ../0012-ARM-dts-imx6qdl-udoo.dtsi-fix-onboard-USB-HUB-proper.patch
-  GIT_DIR=/tmp git apply ../0013-ARM-dts-imx6q-evi-Fix-onboard-hub-reset-line.patch
-  GIT_DIR=/tmp git apply ../0014-ARM-mvebu-declare-asm-symbols-as-character-arrays-in.patch
+  GIT_DIR=/tmp git apply ../0009-usb-dwc2-disable-power_down-on-rockchip-devices.patch
 
   # arch-c201 patches
   GIT_DIR=/tmp git apply ../0020-RK3288-HDMI-clock-hacks-combined.patch
-  GIT_DIR=/tmp git apply ../0021-usb-dwc2-disable-power-down-for-rockchip-and-amlogic.patch
   GIT_DIR=/tmp git apply ../0022-dwc2-mode-hack.patch
   GIT_DIR=/tmp git apply ../0023-drm-panel-simple-Adjust-n116bge-mode-rate-for-veyron.patch
   GIT_DIR=/tmp git apply ../0024-drm-rockchip-vop-Dither-down-to-RGB666-if-output-bpc.patch
-
+  GIT_DIR=/tmp git apply ../0025-drm-rockchip-vop-implement-gamma-lut.patch
   cat "${srcdir}/config" > ./.config
 
   # add pkgrel to extraversion
@@ -325,28 +314,22 @@ for _p in ${pkgname[@]}; do
   }"
 done
 
-md5sums=('bee5fe53ee1c3142b8f0c12c0d3348f9'
-         '548cb705ab3352155494411c5c6e4c7f'
-         'dc35c83fd8739c7de08096999f480478'
-         'fb218c1825366e722be83dd705d02822'
-         'bfeb8670a65fc8c14a7076ec623e9898'
-         '1651316b545214bb346af28f3925ccd0'
-         '625bc1c129c076f85a0794277438fbf3'
-         '95ffcc1c52475c1de2e5478c4896f0ca'
-         '5d8b1483f219edd892536e26663d16c7'
-         '8be87b6399b1cabbca28ee3592d5a9c9'
-         '0fcaafdce5964746e7de8c2bfd8a3421'
-         'd1f48c3560244b8d37084ec316b412d1'
-         'ec013d7dcb738d91ebe668addc96af8f'
-         '2d2e38af1b7db6d27babb8e072c144fc'
-         'eb51f5bbcf5b38956a0ba931d7898f07'
-         'cd9f373ec6e45e99610c9892a8e38100'
-         '8b896e19eac2b3bff797c48e737a166b'
+md5sums=('740a90cf810c2105df8ee12e5d0bb900'
+         'c36273de258b349d35a8c64bbb047660'
+         'acbef669729b6d1714eae635e3fc5cb0'
+         '592521ffbad728eb5b6bd6cbfb2f7483'
+         'b75039abcd5c8d040ff16b3f95586827'
+         'bc31bbe488f53e9978b21a5f7ac728cd'
+         '939c308aacf213b333c8dd10595d488c'
+         '4c71d7af72e76823cc983ded54312edb'
+         '08dc5f1eda02cffa65842b5610ba8cb8'
+         '07232ec1318aab8d53a16e3a99af50a7'
+         '579a311a4be75313e778c9b04fa95f52'
          '64e5b711488df8205a27bae53f1a5844'
-         'ca07019fbd95dd71d2992960443ebbc2'
          '0a11ff16a180483af1acf21b7dc72cf8'
          'b87a109ad48bf8f2f2d774bc93f1fb42'
          'f0faa8c20e17303710dc4c466bf83bd6'
+         '1d6cfbc6153105c26402fcbe7a2f81b4'
          '9751afcc5d59bf5d34561efbe7fc1fec'
          '61c5ff73c136ed07a7aadbf58db3d96a'
          '584777ae88bce2c5659960151b64c7d8'
