--- a/linux-c201/PKGBUILD
+++ b/linux-c201/PKGBUILD
@@ -11,7 +11,7 @@ _srcname=linux-4.19
 _kernelname=${pkgbase#linux}
 _desc="ARMv7 multi-platform"
 pkgver=4.19.0
-pkgrel=1
+pkgrel=3
 rcnrel=armv7-x3
 arch=('armv7h')
 url="http://www.kernel.org/"
@@ -35,6 +35,8 @@ source=("http://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
 	'0023-drm-panel-simple-Adjust-n116bge-mode-rate-for-veyron.patch'
 	'0024-drm-rockchip-vop-Dither-down-to-RGB666-if-output-bpc.patch'
 	'0025-drm-rockchip-vop-implement-gamma-lut.patch'
+	'0026-sound-fix.patch'
+	'0027-DTS-rk3288-fixup-GPU-for-ARM-mali_kbase.patch'
         'kernel.its'
         'kernel.keyblock'
         'kernel_data_key.vbprivk'
@@ -68,6 +70,9 @@ prepare() {
   GIT_DIR=/tmp git apply ../0023-drm-panel-simple-Adjust-n116bge-mode-rate-for-veyron.patch
   GIT_DIR=/tmp git apply ../0024-drm-rockchip-vop-Dither-down-to-RGB666-if-output-bpc.patch
   GIT_DIR=/tmp git apply ../0025-drm-rockchip-vop-implement-gamma-lut.patch
+  GIT_DIR=/tmp git apply ../0026-sound-fix.patch
+  GIT_DIR=/tmp git apply ../0027-DTS-rk3288-fixup-GPU-for-ARM-mali_kbase.patch
+
   cat "${srcdir}/config" > ./.config
 
   # add pkgrel to extraversion
@@ -330,6 +335,8 @@ md5sums=('740a90cf810c2105df8ee12e5d0bb900'
          'b87a109ad48bf8f2f2d774bc93f1fb42'
          'f0faa8c20e17303710dc4c466bf83bd6'
          '1d6cfbc6153105c26402fcbe7a2f81b4'
+         '0a727e583ae8f7fc9a18480a20666cc7'
+         '3e0dbac717ddbbe13d89f40c43aec6d4'
          '9751afcc5d59bf5d34561efbe7fc1fec'
          '61c5ff73c136ed07a7aadbf58db3d96a'
          '584777ae88bce2c5659960151b64c7d8'
